<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".the_major">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addpdf"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="75dp"
                    android:padding="15dp"
                    android:src="@drawable/pdf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/add_pdf"
                    android:textColor="#055703"
                    android:textStyle="bold" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>




    </LinearLayout>

    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/pdfTextView"
        android:text="NO file Selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pdfTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pdf_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="#055703"
        android:textColorHint="#055703"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadPDF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_pdf"
        android:layout_marginTop="16dp"
        android:backgroundTint="#055703"
        app:cornerRadius="50dp"
        android:textAllCaps="false"/>


</LinearLayout>