<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".uploadnotice">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addimage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="75dp"
                    android:padding="15dp"
                    android:src="@drawable/notice" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/add_notice"
                    android:textColor="#055703"
                    android:textStyle="bold" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noticeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notice_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="#055703"
        android:textColorHint="#055703"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadNoticebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_notice"
        android:layout_marginTop="16dp"
        android:backgroundTint="#055703"
        app:cornerRadius="50dp"
        android:textAllCaps="false"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/noticeImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>



    </com.google.android.material.card.MaterialCardView>

</LinearLayout>