<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/admin"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#055703"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/admin_page"
        android:textSize="50dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addNotice"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="79dp"
                    android:padding="15dp"
                    android:src="@drawable/notice" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/add_notice"
                    android:textColor="#055703"
                    android:textStyle="bold" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/DeleteNotice"
            android:layout_width="130dp"
            android:layout_height="127dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:src="@drawable/renotice" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/delete_notice"
                    android:textColor="#055703"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addstd"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="79dp"
                    android:padding="15dp"
                    android:src="@drawable/graduated" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/add_student"
                    android:textColor="#055703"
                    android:textStyle="bold" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addpdf"
            android:layout_width="130dp"
            android:layout_height="127dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:src="@drawable/pdf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/add_pdf"
                    android:textColor="#055703"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>

    </ScrollView>

</RelativeLayout>